# pyfibers

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  __init__.py  compile.py  contributing.md  dev_requirements.txt  example_script.py  example_script_3d.py  example_script_fiber_shift.py  example_script_intra.py  example_script_multiwf.py  example_script_recording.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml  release.yml
MOD_Files/: k_ion_dynamics_tigerholm.mod
docs/: rtd_requirements.txt
docs/examples/: example_script_3d.py  example_script_intra.py  example_script_multiwf.py  example_script_thio.py
docs/source/: algorithms.md  conf.py  custom.md  custom_fiber.md  custom_stim.md  extracellular_potentials.md  fiber_models.md  index.rst  pubs_using.rst  refs.bib
docs/source/_static/: custom.css
docs/source/autodoc/: fiber.rst  fiber_models.rst  fibermodel_enum.rst  index.rst  logging.rst  recording.rst  saving.rst  stimulation.rst
docs/source/tutorials/: 1_create_fiber.ipynb  1_finite_amp.ipynb  2_activation_threshold.ipynb  2_sim_and_activation.ipynb  3_analysis.ipynb  4_resampling_potentials.ipynb  5_block_threshold.ipynb  6_parallelism.ipynb  7_recording.ipynb  8_fiber_paths_3d.ipynb  9_multiple_sources.ipynb  index.rst
plugin_models/: pyproject.toml
plugin_models/src/: __init__.py
plugin_models/src/plugin_models/: __init__.py  fh.py  hh.py  sweeney.py
src/: __init__.py  fiber.py  recording.py  saving.py  stimulation.py
src/MOD/: na_ion_dynamics_tigerholm.mod
src/pyfibers/: __init__.py  compile.py  enums.py  fiber.py  install.py  model_enum.py  stimulation.py
src/pyfibers/MOD/: BK.mod  CaV12.mod  CaV22.mod  DNav18.mod  HCN.mod  KA14.mod  KA34.mod  KM.mod  KV21.mod  NaCX.mod  NaCaPump.mod  NaV7.mod  NaV9.mod  Nakpump.mod  NakpumpSchild.mod  SK.mod  caextscale.mod  can.mod  cat.mod  extrapump.mod  k_ion_dynamics.mod  ka.mod  kca.mod  kd.mod  kds.mod  ks.mod  leak.mod  leakSchild.mod  na_ion_dynamics.mod  naf97mean.mod  newNaV8.mod  sweeney.mod
src/pyfibers/models/: __init__.py  mrg.py  rattay.py  schild.py  sundt.py  sweeney.py  thio.py  tigerholm.py
src/wmglab-neuron/: fiber.py  recording.py  saving.py  stimulation.py
src/wmglab_neuron/: __init__.py  enums.py  fiber.py  fiber_z.json  fiber_z.py  install.py  recording.py  saving.py  stimulation.py
src/wmglab_neuron/models/: __init__.py  mrg.py  rattay.py  schild.py  sundt.py  tigerholm.py
tests/: __init__.py  test_basic.py  test_sfap.py  test_thresholds_run.py  test_wn.py
tests/integration/: __init__.py  test_extra_thresholds.py  test_intra_thresholds.py  test_thresholds_run.py
tests/unit/: test_basic.py  test_end_excitation.py  test_fiber_3d.py  test_model_enum.py  test_multiple_sources.py  test_sfap.py
tests/unit/test_fiber/: __init__.py  test_apcounts.py  test_basic_fiber.py  test_fiber_3d.py  test_initiation_nodes.py  test_measure_cv.py  test_pointsource.py  test_record.py  test_resample.py  test_resample_potentials.py  test_shift_modulus_message.py
tests/unit/test_stimulation/: test_end_excitation.py  test_intrastim_cleanup.py  test_multiple_sources.py
