[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core>=3.4"]

[project]
description = "Models of peripheral nerve fibers"
name = "plugin_models"
version = "0.0.1"

[project.entry-points."pyfibers.fiber_plugins"]
fh = "plugin_models.fh:FHFiber"
hh = "plugin_models.hh:HHFiber"
sweeney = "plugin_models.sweeney:SweeneyFiber"
